fixes sticler error

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,5 +15,8 @@
         "sourceType": "module"
     },
     "rules": {
+        "arrow-parens": 0,
+        "import/no-unresolved": 0,
+        "max-len":"off"
     }
 }
