disables alert error

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
     "rules": {
         "arrow-parens": 0,
         "import/no-unresolved": 0,
-        "max-len":"off"
+        "max-len":"off",
+        "no-alert":"off"
     }
 }
